--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ol>
                 <li><a href="https://codepen.io/JckDanielss/pen/LYxPeWw" target="_blank">💰 Conversor de moedas</a></li>
                 <li><a href="https://codepen.io/JckDanielss/pen/gOgbpKX" target="_blank">🔢 Calculadora</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/BapRvVy" target="_blank">🧙‍♂️ Mentalista</a></li>
+                <li><a href="https://danielcmsantana.github.io/Mentalista/" target="_blank">🧙‍♂️ Mentalista</a></li>
                 <li><a href="https://codepen.io/JckDanielss/pen/OJWgJJO" target="_blank">🎬 AluraFlix</a></li>
                 <li><a href="https://codepen.io/JckDanielss/pen/JjEJjod" target="_blank">🏆 Tabela de Classificação</a></li>
                 <li><a href="https://codepen.io/JckDanielss/pen/LYxLYVG" target="_blank">🃏 Super trunfo</a></li>
