--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div>
             <h2>Insignias Imersão.Dev</h2>        
             <ol>
-                <li><a href="https://codepen.io/JckDanielss/pen/LYxPeWw" target="_blank">💰 Conversor de moedas</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/gOgbpKX" target="_blank">🔢 Calculadora</a></li>
+                <li><a href="https://danielcmsantana.github.io/dollar-converter/" target="_blank">💰 Conversor de moedas</a></li>
+                <li><a href="https://danielcmsantana.github.io/Calculator/" target="_blank">🔢 Calculadora</a></li>
                 <li><a href="https://danielcmsantana.github.io/Mentalista/" target="_blank">🧙‍♂️ Mentalista</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/OJWgJJO" target="_blank">🎬 AluraFlix</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/JjEJjod" target="_blank">🏆 Tabela de Classificação</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/LYxLYVG" target="_blank">🃏 Super trunfo</a></li>
-                <li><a href="https://codepen.io/JckDanielss/pen/NWdgWxz" target="_blank">🎓 Certificard</a></li>   
+                <li><a href="https://danielcmsantana.github.io/Aluraflix/" target="_blank">🎬 AluraFlix</a></li>
+                <li><a href="https://danielcmsantana.github.io/Leaderboard/" target="_blank">🏆 Tabela de Classificação</a></li>
+                <li><a href="https://danielcmsantana.github.io/Top-trumps/" target="_blank">🃏 Super trunfo</a></li>
+                <li><a href="https://danielcmsantana.github.io/Portifolio/" target="_blank">🎓 Certificard</a></li>   
             </ol>
 
         </div>
