--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header>
             <img src="https://pbs.twimg.com/profile_images/1391799132503908353/dyPsLzA9_400x400.jpg" >
         </header>
-        <h1>Daniel Santana (@Dan_carlosss)</h1>
-
+        <h1>Daniel Santana <a href="https://www.linkedin.com/in/danielcmsantana/" target="_blank">(@danielcmsantana)</a></h1>
+        
         <div>
             <h2>Insignias Imersão.Dev</h2>        
             <ol>
